Fix to styling for behavior and browser inputs. In particular, browser input became unreadable when focused.

--- a/public/js/editor/plugins/behavior/css/style.css
+++ b/public/js/editor/plugins/behavior/css/style.css
@@ -126,6 +126,12 @@
 	float: right;
 	height: 1.667em;
 	line-height: 1.667em;
+	-webkit-transition: background 0.15s ease-in-out;
+	-moz-transition: background 0.15s ease-in-out;
+	-o-transition: background 0.15s ease-in-out;
+}
+.dataTables_filter input:focus {
+	background: #666;
 }
 .dataTables_filter label {
 	display: block;
